# pest-to-marser

./: .gitignore  .vercelignore  Cargo.toml  IMPROVE.md  LICENSE  PLAN.md  README.md  TOFIX.md  vercel.json
.github/workflows/: deploy.yml  test.yml
src/: ast.rs  codegen.rs  convert.rs  error.rs  expr.rs  grammar.rs  lib.rs  main.rs  normalize.rs  output.rs  peg.rs  progress.rs  scc.rs  specialize.rs  syntax.rs  trivia.rs  validate.rs
src/codegen/: format.rs  generator.rs  mod.rs  naming.rs
tests/: e2e.rs  export_project.rs  fixtures.toml  integration.rs
tests/fixtures/: bounded_repeat.pest  calc.pest  case_insensitive.pest  compound_atomic.pest  exact_repeat.pest  left_rec.pest  lookahead.pest  non_atomic.pest  optional.pest  peg_calc.peg  peg_hex_color.peg  peg_lookahead.peg  peg_optional.peg  peg_positive_lookahead.peg  peg_simple.peg  positive_lookahead.pest  ranges.pest  simple.pest
web/: Cargo.toml  build.sh  dev.sh  index.html  vercel-build.sh  vercel.json
web/design-agents/: PROMPTS.md
web/src/: examples.js  lib.rs  main.js  templates.js  ui.js
