[package]
name = "pest-to-marser"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pest-to-marser"
path = "src/main.rs"

[dependencies]
marser = "0.2.2"
prettyplease = "0.2"
quote = "1"
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["full"] }
toml = "0.8"

[dev-dependencies]
pest = "2.8"
pest_derive = "2.8"
proptest = "1"
toml = "0.8"

[[bin]]
name = "update-test-fixtures"
path = "src/bin/update_test_fixtures.rs"

[[bin]]
name = "generate-web-examples"
path = "src/bin/generate_web_examples.rs"
